--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ plainwhite:
 markdown: kramdown
 remote_theme: thelehhman/plainwhite-jekyll
 show_excerpts: true
+highlighter: rouge
+    input: GFM
 plugins:
   - jekyll-feed
   - jekyll-redirect-from
