--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: querybot.net@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Query Bot RPA.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://querybot.net" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:categories/:title/
 plainwhite:
   name: Query Bot
