--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,17 @@ email: querybot.net@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Query Bot RPA.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://querybot.net" # the base hostname & protocol for your site, e.g. http://example.com
 permalink: /:categories/:title/
 plainwhite:
   name: Query Bot
   tagline: A Simple RPA Blog
   date_format: "%b %-d, %Y"
   analytics_id: UA-155112982-1
+  disqus_shortname: querybot
 
 markdown: kramdown
+highlighter: rouge
 remote_theme: thelehhman/plainwhite-jekyll
 show_excerpts: true
 plugins:
